--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <table cellspacing="20">
      <tr>
        <td>
-         <img src="image/CV.jpg" alt="Yusuf Wasiu profile image"/>
+         <img src="image/wasiu.jpg" alt="Yusuf Wasiu profile image"/>
        </td>
        <td>
          <h1>Yusuf Wasiu</h1>
